# sensorllm

./: .env.example  .gitignore  CLAUDE.md  COLAB_GUIDE.md  README.md  SensorLLM_Colab_Training.ipynb  colab_training.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: CLAUDE.md
configs/adapters/: linear_projection.yaml  perceiver.yaml  qformer.yaml
configs/base/: data_base.yaml  model_base.yaml  training_base.yaml
configs/experiments/: exp001_cnn1d_linear.yaml  exp001_linear_proj_vit.yaml  exp002_qformer_vit.yaml  exp002_transformer_qformer.yaml  exp003_patchtst_perceiver.yaml  exp003_perceiver_resnet.yaml  exp004_cnn1d_linear_gpt2.yaml  exp005_cnn1d_linear_gpt2_real.yaml
data/models/tiny-gpt2/: config.json  model.safetensors  tokenizer.json
data/splits/: README.md
docs/: adapter_taxonomy.md  architecture.md  data_format.md  experiment_log.md
notebooks/: 01_data_exploration.ipynb  02_transform_comparison.ipynb  03_adapter_ablation.ipynb  04_results_analysis.ipynb
scripts/: download_model.py  evaluate.py  export_model.py  generate_synthetic_data.py  infer.py  preprocess_sensors.py  train.py
sensorllm/: __init__.py
sensorllm/data/: CLAUDE.md  __init__.py
sensorllm/data/datasets/: __init__.py  aircraft_qa.py  base.py  pretrain.py
sensorllm/data/preprocessing/: __init__.py  augment.py  normalize.py  windowing.py
sensorllm/data/sensors/: __init__.py  base.py  imu.py  pressure.py  temperature.py  vibration.py
sensorllm/data/synthetic/: __init__.py  annotation_generator.py  dataset_builder.py  sensor_generator.py
sensorllm/data/transforms/: __init__.py  base.py  cwt.py  (+3 more)
sensorllm/evaluation/: __init__.py  evaluator.py  metrics.py
sensorllm/models/: CLAUDE.md  __init__.py  sensorllm_model.py
sensorllm/training/: CLAUDE.md  __init__.py  callbacks.py  losses.py  optimizers.py  trainer.py
sensorllm/utils/: __init__.py  config.py  io.py  logging.py  reproducibility.py
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py  test_evaluation.py  test_training_loop.py
tests/unit/: test_adapters.py  test_config.py  test_datasets.py  test_encoders.py  test_llm_backbone.py  test_synthetic.py  test_transforms.py
(+18 files in other folders)
